--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-.env
-node_modules
+
+#misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+#dependencies
+/node_modules
+
+
