--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
 
-    "start": "node /index.js",
+    "start": "node ./index.js",
     "desarrollo":"concurrently \"npm run dev \" \"npm run watch \"",
     "dev": "nodemon ./index.js",
     "watch": "webpack -w --mode development"
