--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "proyecto-uptask-node",
   "main": "index.js",
   "scripts": {
-
-    "start": "node /app/index.js",
+    "start": "node ./index.js",
     "desarrollo":"concurrently \"npm run dev \" \"npm run watch \"",
     "dev": "nodemon ./index.js",
     "watch": "webpack -w --mode development"
